force-app/main/default/objects/bre__BR_Event__c/bre__BR_Event__c.object-meta.xml
<CustomObject>
    <label>AC Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>