force-app/main/default/objects/bre__BR_Event__c/fields/bre__BR_Events_Zone__c.field-meta.xml
<CustomField>
    <fullName>bre__BR_Events_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>bre__BR_Events_Zone__c</referenceTo>
    <relationshipLabel>BR Events</relationshipLabel>
    <relationshipName>BR_Events</relationshipName>
    <type>Lookup</type>
</CustomField>