force-app/main/default/objects/bre__BR_Event__c/fields/bre__End_Date__c.field-meta.xml
<CustomField>
    <fullName>bre__End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>