force-app/main/default/objects/bre__BR_Event__c/fields/bre__Hide_attendees__c.field-meta.xml
<CustomField>
    <fullName>bre__Hide_attendees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide attendees</label>
    <type>Checkbox</type>
</CustomField>