force-app/main/default/objects/bre__BR_Event__c/fields/bre__Limit_of_attendees__c.field-meta.xml
<CustomField>
    <fullName>bre__Limit_of_attendees__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Zero means unlimited.</inlineHelpText>
    <label>Limit of attendees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>