force-app/main/default/objects/bre__BR_Event__c/fields/bre__List_Image_Filename__c.field-meta.xml
<CustomField>
    <fullName>bre__List_Image_Filename__c</fullName>
    <label>List Image Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>