force-app/main/default/objects/bre__BR_Event__c/fields/bre__Publicly_available__c.field-meta.xml
<CustomField>
    <fullName>bre__Publicly_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publicly available</label>
    <type>Checkbox</type>
</CustomField>