force-app/main/default/objects/bre__BR_Event__c/fields/bre__Reminder_Hours__c.field-meta.xml
<CustomField>
    <fullName>bre__Reminder_Hours__c</fullName>
    <defaultValue>&quot;1;24;168;&quot;</defaultValue>
    <label>Reminder Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>