force-app/main/default/objects/bre__BR_Event__c/fields/bre__Send_reminders__c.field-meta.xml
<CustomField>
    <fullName>bre__Send_reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send reminders</label>
    <type>Checkbox</type>
</CustomField>