force-app/main/default/objects/bre__BR_Event__c/fields/bre__Timezone__c.field-meta.xml
<CustomField>
    <fullName>bre__Timezone__c</fullName>
    <label>Timezone to show to public</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+14:00) Line Is. Time</fullName>
            </value>
            <value>
                <fullName>(GMT+13:45) Chatham Daylight Time</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Phoenix Is. Time</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Tonga Time</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) New Zealand Daylight Time</fullName>
            </value>
            <value>
                <fullName>(GMT+12:45) Chatham Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Time</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) New Zealand Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Fiji Time</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Solomon Is. Time</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Norfolk Time</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Lord Howe Daylight Time</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Australian Eastern Daylight Time</fullName>
            </value>
            <value>
                <fullName>(GMT+10:30) Lord Howe Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+10:30) Australian Central Daylight Time</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Australian Eastern Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+09:30) Australian Central Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Korea Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Japan Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Hong Kong Time</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Malaysia Time</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Philippines Time</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) China Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Singapore Time</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Australian Western Standard Time</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Indochina Time</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) West Indonesia Time</fullName>
            </value>
            <value>
                <fullName>(GMT+06:30) Myanmar Time</fullName>
            </value>
            <value>
                <fullName>(GMT+06:00) Bangladesh Time</fullName>
            </value>
            <value>
                <fullName>(GMT+05:45) Nepal Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>