force-app/main/default/objects/bre__BR_Event__c/fields/bre__Unlisted_Event__c.field-meta.xml
<CustomField>
    <fullName>bre__Unlisted_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlisted Event</label>
    <type>Checkbox</type>
</CustomField>