force-app/main/default/objects/bre__BR_Event__c/fields/bre__Venue_Address__c.field-meta.xml
<CustomField>
    <fullName>bre__Venue_Address__c</fullName>
    <label>Venue Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>