force-app/main/default/objects/bre__BR_Event__c/validationRules/bre__End_Date_Cannot_Be_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>bre__End_Date_Cannot_Be_Before_Start_Date</fullName>
    <active>true</active>
    <description>Validates that a custom field called End Date does not come before another custom field called Start Date.</description>
    <errorConditionFormula>bre__End_Date__c &lt; bre__Start_Date__c</errorConditionFormula>
    <errorDisplayField>bre__End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date.</errorMessage>
</ValidationRule>