force-app/main/default/objects/bre__BR_Event__c/listViews/bre__All.listView-meta.xml
<ListView>
    <fullName>bre__All</fullName>
    <columns>NAME</columns>
    <columns>bre__Start_Date__c</columns>
    <columns>bre__End_Date__c</columns>
    <columns>bre__Venue_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>